@@ -1,13 +1,18 @@
 package com.example.dating_app_backend.controller;
 
 import com.example.dating_app_backend.dto.MessageDto;
-import com.example.dating_app_backend.entity.Message;
+import com.example.dating_app_backend.mapper.MessageMapper;
+import com.example.dating_app_backend.repository.UserProfileRepository;
 import com.example.dating_app_backend.service.MessageService;
+import com.example.dating_app_backend.websocket.dto.ChatMessageEvent;
+import com.example.dating_app_backend.websocket.dto.MessageStatus;
+import com.example.dating_app_backend.websocket.dto.MessageStatusPayload;
 import lombok.RequiredArgsConstructor;
+import org.springframework.messaging.simp.SimpMessagingTemplate;
+import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/messages")
@@ -16,34 +21,87 @@ import java.util.stream.Collectors;
 public class MessageController {
 
     private final MessageService service;
+    private final MessageMapper messageMapper;
+    private final SimpMessagingTemplate messagingTemplate;
+    private final UserProfileRepository userProfileRepository;
 
     @PostMapping
     public MessageDto sendMessage(
             @RequestParam Integer matchId,
-            @RequestParam Integer senderId,
             @RequestParam Integer receiverId,
-            @RequestParam String content) {
-        return toDto(service.sendMessage(matchId, senderId, receiverId, content));
+            @RequestParam(required = false) Integer senderId,
+            @RequestParam String content,
+            @AuthenticationPrincipal Integer accountId) {
+        if (accountId == null) {
+            throw new IllegalStateException("Không xác định được tài khoản đang đăng nhập.");
+        }
+
+        var senderProfile = userProfileRepository.findByAccount_AccountId(accountId)
+                .orElseThrow(() -> new IllegalStateException("Không tìm thấy hồ sơ người dùng tương ứng."));
+        Integer actualSenderId = senderProfile.getUserId();
+
+        if (senderId != null && !senderId.equals(actualSenderId)) {
+            throw new SecurityException("Bạn không được phép gửi tin nhắn thay người khác.");
+        }
+
+        var message = service.sendMessage(matchId, actualSenderId, receiverId, content);
+        var dto = messageMapper.toDto(message);
+
+        ChatMessageEvent senderEvent = new ChatMessageEvent(dto, MessageStatus.SENT, null);
+        ChatMessageEvent receiverEvent = new ChatMessageEvent(dto, MessageStatus.SENT, null);
+        MessageStatusPayload delivered = new MessageStatusPayload(
+                dto.getMessageId(),
+                dto.getMatchId(),
+                actualSenderId,
+                receiverId,
+                MessageStatus.DELIVERED
+        );
+
+        messagingTemplate.convertAndSendToUser(
+                String.valueOf(actualSenderId),
+                "/queue/chat",
+                senderEvent
+        );
+
+        messagingTemplate.convertAndSendToUser(
+                String.valueOf(receiverId),
+                "/queue/chat",
+                receiverEvent
+        );
+
+        messagingTemplate.convertAndSendToUser(
+                String.valueOf(senderId),
+                "/queue/chat-status",
+                delivered
+        );
+
+        return dto;
     }
 
     @GetMapping("/{matchId}")
     public List<MessageDto> getMessages(@PathVariable Integer matchId) {
-        return service.getMessagesByMatch(matchId)
-                .stream().map(this::toDto)
-                .collect(Collectors.toList());
+        return service.getMessagesByMatch(matchId).stream()
+                .map(messageMapper::toDto)
+                .toList();
     }
 
-    private MessageDto toDto(Message m) {
-        MessageDto dto = new MessageDto();
-        dto.setMessageId(m.getMessageId());
-        dto.setMatchId(m.getMatch().getMatchId());
-        dto.setSenderId(m.getSender().getUserId());
-        dto.setSenderName(m.getSender().getFullName());
-        dto.setReceiverId(m.getReceiver().getUserId());
-        dto.setContent(m.getContent());
-        dto.setMessageType(m.getMessageType().name());
-        dto.setIsRead(m.getIsRead());
-        dto.setCreatedAt(m.getCreatedAt());
-        return dto;
+    @PostMapping("/{matchId}/read")
+    public void markConversationAsRead(
+            @PathVariable Integer matchId,
+            @RequestParam(required = false) Integer userId,
+            @AuthenticationPrincipal Integer accountId) {
+        if (accountId == null) {
+            throw new IllegalStateException("Không xác định được tài khoản đang đăng nhập.");
+        }
+
+        var profile = userProfileRepository.findByAccount_AccountId(accountId)
+                .orElseThrow(() -> new IllegalStateException("Không tìm thấy hồ sơ người dùng tương ứng."));
+        Integer actualUserId = profile.getUserId();
+
+        if (userId != null && !userId.equals(actualUserId)) {
+            throw new SecurityException("Bạn không thể đánh dấu đã đọc thay người khác.");
+        }
+
+        service.markConversationAsRead(matchId, actualUserId);
     }
 }
